--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "My project unity 6.sln"
+    "dotnet.defaultSolution": "snake_power_byte.sln"
 }
